<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:hint="@string/enter"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/dictionary_button"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@color/black"
        android:foregroundGravity="center_horizontal"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/search_word"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/thesaurus_button"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@color/white"
        android:foregroundGravity="center_horizontal"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/search_word"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:padding="@dimen/margin_16dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_word"
        app:layout_constraintVertical_bias="0.229" />

    <TextView
        android:id="@+id/meaning_or_similar_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meaning"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_word"
        app:layout_constraintVertical_bias="0.36" />
</androidx.constraintlayout.widget.ConstraintLayout>